--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
 
 <body>
   <h1>Trevor Dobson</h1>
-  <p>I am a software developer from Gig Harbor, Washington. I have a 5 year old daughter and a 3 year old yellow lab.  I served 4 years in the U.S. Army and I have a bachelor's in business management.  I attended Code Fellows where I focused on JavaScript/NodeJS.  I am currently a Software Development Engineer Apprentice with Amazon.
-  </p>
-  <div>My favorite trails (that I've done)
-    <ol>
-      <li>Kalalau Trail</li>
-      <li>Lake of the Angels</li>
-      <li>Marmot Pass</li>
-      <li>Mt. Ellinor</li>
-    </ol>
+  <div id="container">
+    <p>I am a software developer from Gig Harbor, Washington. I have a 5 year old daughter and a 3 year old yellow lab.  I served 4 years in the U.S. Army and I have a bachelor's in business management.  I attended Code Fellows where I focused on JavaScript/NodeJS.  I am currently a Software Development Engineer Apprentice with Amazon.
+    </p>
+    <div id="my-lists">
+      <div>My favorite trails (that I've done)
+        <ol>
+          <li>Kalalau Trail</li>
+          <li>Lake of the Angels</li>
+          <li>Marmot Pass</li>
+          <li>Mt. Ellinor</li>
+        </ol>
+      </div>
+      <div>Some of My Favorite Beers
+        <ul>
+          <li>Hamm's</li>
+          <li>Georgetown Brewing: Bodhizafa IPA</li>
+          <li>Golden Road: Ride On IPA</li>
+          <li>Elysian: Spacedust IPA</li>
+        </ul>
+      </div>
   </div>
+</div>
+
   
   <script src="./js/app.js"></script>
 </body>
